[workspace]
members = [ "contracts/margined-collector", "contracts/margined-power", "contracts/margined-query", "contracts/margined-staking", "contracts/mocks/*", "packages/*" ]

[workspace.package]
authors       = [ "Friedrich Grabner <max.grabner@margined.io>", "George Ornbo <george@shapeshed.com>" ]
documentation = "https://docs.margined.io/"
edition       = "2021"
homepage      = "https://margined.io"
keywords      = [ "cosmos", "cosmwasm", "margined" ]
license       = "GPL-3.0-or-later"
repository    = "https://github.com/margined-protocol/power"
version       = "0.1.0"

[workspace.dependencies]
anyhow             = "1.0.69"
cosmrs             = { version = "0.9.0", features = [ "cosmwasm" ] }
cosmwasm-schema    = "1.4.1"
cosmwasm-std       = "= 1.4.1"
cosmwasm-storage   = "1.4.1"
cw-controllers     = "1.1.0"
cw-item-set        = { version = "0.7.1", default-features = false, features = [ "iterator" ] }
cw-paginate        = "0.2.1"
cw-storage-plus    = "1.2.0"
cw-utils           = "1.0.1"
cw2                = "1.0.1"
cw721              = "0.16.0"
cw721-base         = { version = "0.16.0", features = [ "library" ] }
injective-math     = "= 0.1.13"
itertools          = "0.10.5"
num                = "0.4.0"
osmosis-std        = "0.16.2"
osmosis-test-tube  = "20.1.1"
schemars           = "0.8.12"
serde              = { version = "1.0.155", default-features = false, features = [ "derive" ] }
serde-wasm-bindgen = "0.5.0"
serde_json         = "1.0.94"
thiserror          = "1.0.44"
wasm-bindgen       = "0.2.84"

# packages
margined-common   = { version = "0.1.0", path = "packages/margined_common" }
margined-protocol = { version = "0.1.0", path = "packages/margined_protocol" }
margined-testing  = { version = "0.1.0", path = "packages/margined_testing" }

# contracts
margined-collector = { version = "0.1.0", path = "contracts/margined-collector" }
margined-power     = { version = "0.1.0", path = "contracts/margined-power" }
margined-query     = { version = "0.1.0", path = "contracts/margined-query" }
margined-staking   = { version = "0.1.0", path = "contracts/margined-staking" }

# mocks
mock-query = { version = "0.1.0", path = "contracts/mocks/mock-query" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = "abort"
rpath            = false
